@@ -11,6 +11,8 @@ NEXT RELEASE
    false instead of null.
  - An attribute's writer property now defaults to false to support the best
    practice of immutable objects.
+ - Avoid a race condition when filters depend on other attributes being
+   set during object construction.
 
 0.0.7 : 2013-06-18
  - Attributes on Traits (and Constructors) can now be pre-made o.Attribute
